[project]
name = "Wordle Solver"
version = "1"
description = "Basic wordle solver"
authors = ["Ben Gosney <bengosney@googlemail.com>"]
python = "^3.10"
homepage = "https://github.com/bengosney/wordle-solver"
repository = "https://github.com/bengosney/wordle-solver"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 128
target-version = ['py310']

[tool.pycln]
all = true
